# dojo

./: .gitattributes  .gitignore  .gitmodules  .hgignore  .travis.yml  AddDojoIncludes.txt  CMakeLists.txt  ClangGCCSetup.cmake  Dojo.vcproj  Dojo.vcxproj  Dojo_vc2008.sln  Doxyfile  MSVCSetup.cmake  Makefile  cotire.cmake  cpp_check.bat  create_dojo_h.sh  dojo-Prefix.pch  dojo_gl_header.cpp  make_swizzle.py  project.vcxproj.user.in  readme.txt  stdafx.cpp  stdafx.h  symbolicatelog.sh
Android/: AndroidManifest.xml
Android/jni/: Android.mk  Application.mk
Android/jni/dojo/: Android.mk
Android/jni/game/: main.cpp
Android/res/values/: strings.xml
Cocoa/: CocoaPlatform.h  CocoaPlatform.mm
Cocoa/IOS/: IOSPlatform.h  IOSPlatform.mm
Cocoa/OSX/: GenericListener.h  OSXPlatform.h  OSXPlatform.mm
IOS/: Application.h  Application.mm  IOSPlatform.h  IOSPlatform.mm  NinjaAppDelegate.h  NinjaAppDelegate.mm  Platform.mm
Linux/: LinuxPlatform.cpp  LinuxPlatform.h
OBJCooker/: OBJCooker.sh
OBJCooker/src/: EndiannessFilterStream.java  Main.java  Mesh.java  main.java
OSX/: Dojo-Info.plist  OSXPlatform.h  OSXPlatform.mm  StepCallback.h  StepCallback.mm
ObjC Wrapper/: Application.h  Application.mm  ApplicationSetupDelegate.h
Win32/: Platform.cpp  Win32Platform.cpp  Win32Platform.h
apple/: ApplePlatform.h  ApplePlatform.mm
apple/IOS/: AppDelegate.h  AppDelegate.mm  Application.h  Application.mm  IOSPlatform.h  IOSPlatform.mm
apple/OSX/: CustomOpenGLView.h  CustomOpenGLView.mm  Dojo-Info.plist  Dojo-Prefix.pch  GenericListener.mm  OSXPlatform.h  OSXPlatform.mm  OSXPlatform.mm.orig
apple/iOS/: AppDelegate.mm  Application.h  Application.mm  IOSPlatform.h  IOSPlatform.mm
dojo-OSX.xcodeproj/: project.pbxproj
dojo-OSX.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
dojo-OSX.xcodeproj/xcuserdata/tommaso.xcuserdatad/xcschemes/: dojo.xcscheme  xcschememanagement.plist
dojo-iOS.xcodeproj/: project.pbxproj
dojo-iOS.xcodeproj/xcuserdata/tommaso.xcuserdatad/xcschemes/: Debug.xcscheme  Release.xcscheme  xcschememanagement.plist
dojo.xcodeproj/: project.pbxproj
dojo.xcodeproj/project.xcworkspace/xcuserdata/tommaso.xcuserdatad/: UserInterfaceState.xcuserstate  UserInterfaceState.xcuserstate.orig
dojo.xcodeproj/xcuserdata/tommaso.xcuserdatad/xcschemes/: Debug.xcscheme  Release.xcscheme  dojo-ios.xcscheme  dojo-osx.xcscheme  xcschememanagement.plist
dojo2D/: CMakeLists.txt
dojo2D/include/: Dojo2D.h
dojo2D/include/dojo2D/: AABBQueryResult.h  Body.h  BodyPart.h  BodyPartType.h  ContactMode.h  DebugDrawMeshBuilder.h  ForceField.h  Joint.h  Material.h  ParticleSystem.h  ParticleSystemRenderer.h  PhysUtil.h  RayResult.h  World.h  WorldListener.h  common_header.h
dojo2D/src/: Body.cpp  BodyPart.cpp  DebugDrawMeshBuilder.cpp  ForceField.cpp  Joint.cpp  Material.cpp  ParticleSystem.cpp  ParticleSystemRenderer.cpp  PhysUtil.cpp  RayResult.cpp  World.cpp  stdafx.h
include/: AnimatedQuad.h  Array.h  Buffer.h  Color.h  Font.h  FrameSet.h  Game.h  GameState.h  Mesh.h  Model.h  Object.h  Particle.h  ParticlePool.h  Platform.h  Render.h  Render.h.orig  RenderState.h  RenderTarget.h  Renderable.h  Renderable.h.orig  ResourceGroup.h  Runnable.h  Scene.h  Serializable.h  SoundBuffer.h  SoundManager.h  SoundSet.h  SoundSource.h  Sprite.h  StateInterface.h  Table.h  TextArea.h  Texture.h  Thread.h  Timer.h  TouchSource.h  Trail.h  Utils.h  Vector.h  Viewport.h  (+5 more)
include/dojo/: AABB.cpp  AABB.h  AStar.h  AnimatedQuad.h  ApplicationListener.h  Array.h  AsyncJob.h  BackgroundQueue.h  BackgroundWorker.h  Base64.h  BaseObject.h  BlendingMode.h  Buffer.h  Color.h  Component.cpp  Component.h  Console.h  DebugUtils.h  Email.h  FBPipe.h  File.cpp  File.h  FileStream.cpp  FileStream.h  FocusListener.h  Font.h  FontSystem.cpp  FontSystem.h  FrameSet.h  FrameSubmitter.h  Framebuffer.h  FrameworkTests.h  Game.h  GameState.h  GlobalUniformData.h  InputDevice.h  InputDeviceListener.h  InputSystem.h  InputSystemListener.cpp  InputSystemListener.h  (+107 more)
include/dojo/android/: AndroidGLExtern.h  AndroidPlatform.h  android_native_app_glue.h  engine_file.h  stdafx.h
include/dojo/apple/: ApplePlatform.h
include/dojo/apple/OSX/: CustomOpenGLView.h  OSXPlatform.h
include/dojo/apple/iOS/: AppDelegate.h  Application.h  IOSPlatform.h
include/dojo/glm/core/: dummy.cpp  setup.hpp
include/dojo/glm/virtrev/: xstream.hpp
include/dojo/linux/: LinuxPlatform.h
include/dojo/win32/: WGL_ARB_multisample.h  Win32Platform.h  XInputController.cpp  XInputController.h  XInputJoystick.h
samples/ninja/: Ninja.sln  Ninja.vcxproj  main.cpp
samples/ninja-android/: AndroidManifest.xml  local.properties
samples/ninja-android/assets/data/: ninjaRun.atlasinfo
samples/ninja-android/jni/: Android.mk  Application.mk  Level.h  MyGame.h  main.cpp
samples/ninja-android/jni/game/: main.cpp
samples/ninja-android/res/values/: strings.xml
src/: AStar.cpp  AnimatedQuad.cpp  AnimatedQuad.mm  BackgroundQueue.cpp  BackgroundWorker.cpp  Base64.cpp  Color.cpp  Color.mm  Console.cpp  DebugUtils.cpp  Email.cpp  File.cpp  FileStream.cpp  Font.cpp  Font.mm  FontSystem.cpp  FrameSet.cpp  FrameSet.mm  Framebuffer.cpp  FrameworkTests.cpp  Game.cpp  Game.mm  GameState.cpp  GameState.mm  InputDevice.cpp  InputSystem.cpp  InputSystemListener.cpp  IteratedNoise.cpp  KeyCode.cpp  Keyboard.cpp  Light.cpp  Log.cpp  LogListener.cpp  Math.cpp  Math.mm  MemoryInputStream.cpp  Mesh.cpp  Mesh.mm  Noise.cpp  Object.cpp  (+68 more)
src/android/: AndroidGLExtern.cpp  AndroidPlatform.cpp  Android_main.c  engine_file.c  lodepng.cpp  lodepng.h
src/apple/: ApplePlatform.mm
src/apple/OSX/: CustomOpenGLView.mm  OSXPlatform.mm
src/apple/iOS/: AppDelegate.mm  Application.mm  IOSPlatform.mm
src/glad/: glad.c  glad.h
src/linux/: LinuxPlatform.cpp
src/win32/: WGL_ARB_multisample.cpp  Win32Platform.cpp  XInputController.cpp  stdafx.cpp
